Copy -> Paste - Pasted elements are not selected #61670

Closed
opened 2019-02-18 13:44:54 +01:00 by Tomasz Muszynski · 19 comments

System Information
Operating system: Win10
Graphics card: GTX1080/970...any

Blender Version
Broken: Paste method for copied to clipboard elemtens

blender-2.80-ec471a9b1c14-win64
//Additional notice: Could you just make simple html mechanism that works from the Bug Report option and run that kind of link:
https://developer.blender.org/maniphest/task/edit/form/1/?version=blender-2.80-ec471a9b1c14-win64
and this could be applied via JS to the specific form text field that is named: version
//

Worked: (optional)
do not remember - but it worked in some previous versions fine

Short description of error
when use copy->paste clipboard mechanism then when paste element from buffer it does not appear selected when option SELECT at Paste Selection from Buffer is enabled.
BTW: this mechanism could have an additional very handy option: Paste into 3D Cursor place.

Exact steps for others to reproduce the error
Just use Copy and Paste with enabled SELECT option

**System Information** Operating system: Win10 Graphics card: GTX1080/970...any **Blender Version** Broken: Paste method for copied to clipboard elemtens **blender-2.80-ec471a9b1c14-win64** //Additional notice: Could you just make simple html mechanism that works from the Bug Report option and run that kind of link: https://developer.blender.org/maniphest/task/edit/form/1/?version=`blender-2.80-ec471a9b1c14-win64` and this could be applied via JS to the specific form text field that is named: `version` // **Worked: (optional)** do not remember - but it worked in some previous versions fine **Short description of error** when use copy->paste clipboard mechanism then when paste element from buffer it does not appear selected when option SELECT at Paste Selection from Buffer is enabled. *BTW: this mechanism could have an additional very handy option: Paste into 3D Cursor place.* **Exact steps for others to reproduce the error** Just use Copy and Paste with enabled SELECT option

Added subscriber: @TomaszMuszynski

Added subscriber: @TomaszMuszynski
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

It looks like it is selected, but not active (when another object is still active). Can you confirm that?

It looks like it is selected, but not active (when another object is still active). Can you confirm that?

No, it is not.
When you copy->paste between two different files then pasted object is not selected nor active.
I checked - this is a Collection problem. When you copy->paste in the root Scene collection, then it works as should.
But when you are using other nested collections then it does not work.

No, it is not. When you copy->paste between two different files then pasted object is not selected nor active. I checked - this is a Collection problem. When you copy->paste in the root Scene collection, then it works as should. But when you are using other nested collections then it does not work.
Member

Added subscribers: @mont29, @dfelinto, @lichtwerk

Added subscribers: @mont29, @dfelinto, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2019-03-19 15:03:58 +01:00
Member

Can confirm.
To me I cant get it to be selected at all (in current master -- there were some changes to appending afaics between the time of the report and today) regardless of pasting into the root Scene Collection or not.

Dug around a little in library_link_end / add_loose_objects_to_scene / add_collections_to_scene but code where FILE_AUTOSELECT flag is used is never actually reached for me.

Not sure if this is one for @mont29 (or @dfelinto possibly?)
Assigning to @mont29 first...

Can confirm. To me I cant get it to be selected at all (in current master -- there were some changes to appending afaics between the time of the report and today) regardless of pasting into the root Scene Collection or not. Dug around a little in `library_link_end` / `add_loose_objects_to_scene` / `add_collections_to_scene` but code where `FILE_AUTOSELECT` flag is used is never actually reached for me. Not sure if this is one for @mont29 (or @dfelinto possibly?) Assigning to @mont29 first...

Added subscriber: @ideasman42

Added subscriber: @ideasman42

There are several glitches here, but I think the main issue is that when we copy and object, we also copy its collections (which triggers the 'paste and instantiate the collection instead of the object' behavior in link code when we paste the buffer).

@dfelinto, @ideasman42, any reason to also write the collections of copied objects? Doing this is going to make things a tad more complicated to handle… And it seems like bad idea to me, if we later want to add copy/paste of collections e.g… :/

There are several glitches here, but I think the main issue is that when we copy and object, we also copy its collections (which triggers the 'paste and instantiate the collection instead of the object' behavior in link code when we paste the buffer). @dfelinto, @ideasman42, any reason to also write the collections of copied objects? Doing this is going to make things a tad more complicated to handle… And it seems like bad idea to me, if we later want to add copy/paste of collections e.g… :/
Bastien Montagne removed their assignment 2019-03-19 16:06:46 +01:00
Campbell Barton was assigned by Bastien Montagne 2019-03-19 16:06:46 +01:00

(assigning to ensure you see the question ;) )

(assigning to ensure you see the question ;) )

I believe pasting collections when pasting an object is a side-effect of unifying groups and collections. It is also quite handy and allow you to paste an entire scene keeping its hierarchy.
Now for the actual reported bug. Even in 2.79 the selection option is not working (although there the objects are always selected).

Anyways I can look at making the pasted objects selected. And optionally - no promises - to get the "Select" option finally working.

I believe pasting collections when pasting an object is a side-effect of unifying groups and collections. It is also quite handy and allow you to paste an entire scene keeping its hierarchy. Now for the actual reported bug. Even in 2.79 the selection option is not working (although there the objects are always selected). Anyways I can look at making the pasted objects selected. And optionally - no promises - to get the "Select" option finally working.
Campbell Barton was unassigned by Dalai Felinto 2019-03-19 19:39:23 +01:00
Dalai Felinto self-assigned this 2019-03-19 19:39:23 +01:00

This issue was referenced by 0c44b7e177

This issue was referenced by 0c44b7e177f394fe93d236aeb4b9ba7b14b2191c

While D4558 address the issue of selecting objects when we instantiate their collection, imho it does not really fix the main issue here.

My main concern currently with copy/paste is that you would expect it to copy/paste objects most of the time, but it actually copy/pastes collections. I really don’t think this is a good behavior, this can very quickly lead you to tens of collections in your viewlayer after only a few copy/pastes…

I think copy/paste from 3DView should only copy objects, and copy/paste of collections should be done from the outliner probably?

While [D4558](https://archive.blender.org/developer/D4558) address the issue of selecting objects when we instantiate their collection, imho it does not really fix the main issue here. My main concern currently with copy/paste is that you would expect it to copy/paste objects most of the time, but it actually copy/pastes collections. I really don’t think this is a good behavior, this can very quickly lead you to tens of collections in your viewlayer after only a few copy/pastes… I think copy/paste from 3DView should only copy objects, and copy/paste of collections should be done from the outliner probably?

Added subscriber: @brecht

Added subscriber: @brecht

I agree we can stop copying collections, doesn't make much sense anymore in the current system.

I agree we can stop copying collections, doesn't make much sense anymore in the current system.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Alright, committed the bit about selectability, but leaving this open to address collection (which may need to remove my code changes, anyways).
Also, there seems to be a strange bug where if I select the Cube, Ctrl+C, select all (Cube + Light + Camera), Ctrl+V it paste not only the cube but all the other objects as well.

Alright, committed the bit about selectability, but leaving this open to address collection (which may need to remove my code changes, anyways). Also, there seems to be a strange bug where if I select the Cube, Ctrl+C, select all (Cube + Light + Camera), Ctrl+V it paste not only the cube but all the other objects as well.
Dalai Felinto was unassigned by Bastien Montagne 2019-03-20 20:42:47 +01:00
Bastien Montagne self-assigned this 2019-03-20 20:42:47 +01:00

Will check on removing collections from copy/paste from 3DView.

Will check on removing collections from copy/paste from 3DView.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61670
No description provided.